--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,11 +1,13 @@
-@import 'color';
+// @import 'color';
+
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
   box-sizing: border-box;
-  //   font-family: '微軟正黑體', 'Times New Roman', Times, serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 h1,
